objects/Unified_Agent_Console_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Use this custom setting to store data related to unified agent console.</description>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AccessTokenString__c</fullName>
        <description>Access token string used for search token in request url for coveo</description>
        <label>AccessTokenString</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageParamString__c</fullName>
        <description>String to be used while setting url params for querying coveo</description>
        <inlineHelpText>String to be used while setting url params for querying coveo</inlineHelpText>
        <label>LanguageParamString</label>
        <length>50</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>IdParam__c</fullName>
        <description>Holds the SFID paramater</description>
        <label>IdParam</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UriHashParam__c</fullName>
        <description>Holds the urihash string</description>
        <label>UriHashParam</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Unified Agent Console Settings</label>
</CustomObject>